syntax = "proto3";

package com.codeengineering.hello.protobuf;

option java_multiple_files = true;

message HelloRequest {
  string message = 1;
}

message HelloResponse {
  string message = 1;
}

service HelloService {
  rpc greetings(HelloRequest) returns(HelloResponse);
}
